login debuggin finished
